# dom-raider

./: .gitignore  Cargo.toml  README.md  config.json  cryptocurrencies.csv  data.csv  test.csv
src/: config.rs  export.rs  file.rs  json.rs  logs.rs  main.rs  models.rs  scraper.rs
